@@ -13,7 +13,7 @@
 
 """Commonly used utility functions."""
 
-__version__='$Revision: 1.11 $'[11:-2]
+__version__='$Revision: 1.12 $'[11:-2]
 
 import sys, os, time
 
@@ -109,3 +109,26 @@ def attrget(o,name,default):
 
 def Dictionary(**kw): return kw # Sorry Guido
     
+def realpath(p):
+    """ Computes the 'real' path of a file or directory devoid of
+    any symlink in any element of the path """
+    p = os.path.abspath(p)
+    if os.name == 'posix':
+        path_list = p.split(os.sep)
+        orig_len = len(path_list)
+        changed = 0
+        i = 1
+        while not changed and i < orig_len:
+            head = path_list[:i]
+            tail = path_list[i:]
+            head_s = os.sep.join(head)
+            tail_s = os.sep.join(tail)
+            if os.path.islink(head_s):
+                head_s = os.readlink(head_s)
+                path_list = head_s.split(os.sep)
+                path_list.extend(tail)
+                p = os.sep.join(path_list)
+                p = realpath(p)
+                changed = 1
+            i = i + 1
+    return p
